--- a/source/catalog.html
+++ b/source/catalog.html
@@ -259,8 +259,10 @@
             <h3 class="sub-card__title">Сахарозаменитель</h3>
           </a>
           <dl class="sub-card__list">
-            <dt class="sub-card__product-value">1 упаковка (100 г)</dt>
-            <dd class="sub-card__price">200 ₽</dd>
+            <div class="sub-card__item">
+              <dt class="sub-card__product-value">1 упаковка (100 г)</dt>
+              <dd class="sub-card__price">200 ₽</dd>
+            </div>
           </dl>
           <a class="sub-card__button button button--primary" href="">заказать</a>
         </li>
@@ -269,8 +271,10 @@
             <h3 class="sub-card__title">питьевая вода</h3>
           </a>
           <dl class="sub-card__list">
-            <dt class="sub-card__product-value">5 литров</dt>
-            <dd class="sub-card__price">50 ₽</dd>
+            <div class="sub-card__item">
+              <dt class="sub-card__product-value">5 литров</dt>
+              <dd class="sub-card__price">50 ₽</dd>
+            </div>
           </dl>
           <a class="sub-card__button button button--primary" href="">заказать</a>
         </li>
@@ -279,8 +283,10 @@
             <h3 class="sub-card__title">молоко</h3>
           </a>
           <dl class="sub-card__list">
-            <dt class="sub-card__product-value">1 литр</dt>
-            <dd class="sub-card__price">100 ₽</dd>
+            <div class="sub-card__item">
+              <dt class="sub-card__product-value">1 литр</dt>
+              <dd class="sub-card__price">100 ₽</dd>
+            </div>
           </dl>
           <a class="sub-card__button button button--primary" href="">заказать</a>
         </li>
@@ -289,8 +295,10 @@
             <h3 class="sub-card__title">витамины</h3>
           </a>
           <dl class="sub-card__list">
-            <dt class="sub-card__product-value">1 упаковка (30 г)</dt>
-            <dd class="sub-card__price">300 ₽</dd>
+            <div class="sub-card__item">
+              <dt class="sub-card__product-value">1 упаковка (30 г)</dt>
+              <dd class="sub-card__price">300 ₽</dd>
+            </div>
           </dl>
           <a class="sub-card__button button button--primary" href="">заказать</a>
         </li>
