--- a/source/index.html
+++ b/source/index.html
@@ -83,16 +83,16 @@
     <section class="advantages container">
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--leaf">
           <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--chemistry">
           <p class="advantages__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--eat">
           <p class="advantages__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--scales">
           <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
@@ -154,17 +154,17 @@
         </a>
         <ul class="socials">
           <li class="socials__item">
-            <a class="socials__link" href="https://vk.com/htmlacademy">
+            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="https://t.me/htmlacademy">
+            <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
